--- a/miage-code-crafting/.classpath
+++ b/miage-code-crafting/.classpath
@@ -36,42 +36,42 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.base.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.base.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.controls.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.controls.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.fxml.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.fxml.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.graphics.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.graphics.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.media.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.media.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.swing.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.swing.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx.web.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx.web.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Sarah Kjallouch/Downloads/javafx-sdk-17.0.8/lib/javafx-swt.jar">
+	<classpathentry kind="lib" path="C:/Users/dankl/OneDrive/Documents/Bibliotheque JavaFX/javafx-sdk-19/lib/javafx-swt.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
